fix the avatar on mobile

--- a/style.css
+++ b/style.css
@@ -146,7 +146,8 @@ footer {
 	z-index: 1;
 }
 .ava {
-	max-width: 	100%;
+	width: auto;
+	max-width: 100%;
 	height: 100%;
 	overflow: hidden;
 }
